--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,14 +96,22 @@ jobs:
       run: |
         cd build && ninja
         
+    - name: Package Build
+      shell: bash
+      run: |
+          mkdir package
+          cp -r build/bin package/
+          7z a package.7z ./package
+          
     - name: Create Release
+      id: create_release
       uses: softprops/action-gh-release@v1
       with:
         draft: true
-        files: |
-          build/bin/**/*
+        files: package.7z
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
     - name: Running C++ Tests
       shell: bash
       run: |
